full app completed

--- a/app/assets/stylesheets/base/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/base/foundation_and_overrides.scss
@@ -213,10 +213,10 @@ $font-family-monospace: 'Gloria Hallelujah', cursive;
 // $h6-font-size: 1rem;
 
 // We use these to control header size reduction on small screens
-// $h1-font-reduction: rem-calc(10) !default;
-// $h2-font-reduction: rem-calc(10) !default;
-// $h3-font-reduction: rem-calc(5) !default;
-// $h4-font-reduction: rem-calc(5) !default;
+// $h1-font-reduction: 0 !default;
+// $h2-font-reduction: 0 !default;
+// $h3-font-reduction: 0 !default;
+// $h4-font-reduction: 0 !default;
 // $h5-font-reduction: 0 !default;
 // $h6-font-reduction: 0 !default;
 
