--- a/app/assets/stylesheets/jobs.css.erb
+++ b/app/assets/stylesheets/jobs.css.erb
@@ -71,6 +71,8 @@ h3 {
 	top: 5%;
 }
 
+
+
 .image {
 	}
 img.location-job {
@@ -97,6 +99,23 @@ img.results-job {
   filter: drop-shadow(5px 5px 5px rgba(0,0,0,.25));
 }
 
+img.final-job {
+	height: 150px;
+	margin-top: 1em;
+	margin-left: auto;
+	margin-right: auto;
+	-webkit-filter: drop-shadow(5px 5px 5px rgba(0,0,0,.25));
+  filter: drop-shadow(5px 5px 5px rgba(0,0,0,.25));
+}
+
+.bump {
+	margin-top: 2em;
+}
+
+.bump {
+	margin-top: 1em;
+}
+
 .results {
 	background-color: rgba(256, 256, 256, .75);
 	overflow: scroll;
@@ -114,4 +133,28 @@ img.results-job {
 
 .image-bottom {
 	background-position: bottom center;
+	background-size: cover;
 }
+
+.heading.final {
+	top: 9em;
+	left: 0;
+	right: 0;
+	max-width: 35%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+h2.last, h3.last, h4.last {
+	color: #1D9FFF;
+	text-shadow: none;
+}
+
+body {
+	background-image: url("<%= asset_path 'landscape.jpg' %>");
+	background-size: cover;
+
+}
+
+body:before{
+	background-color: rgba(256, 256, 256, 1);
