updates to results styles

--- a/app/assets/stylesheets/jobs.css.erb
+++ b/app/assets/stylesheets/jobs.css.erb
@@ -145,7 +145,7 @@ img.final-job {
 	margin-right: auto;
 }
 
-h2.last, h3.last, h4.last {
+h2.last, h3.last, h4.last, .resultsheader {
 	color: #1D9FFF;
 	text-shadow: none;
 }
