--- a/app/assets/stylesheets/jobs.css.erb
+++ b/app/assets/stylesheets/jobs.css.erb
@@ -137,10 +137,11 @@ img.final-job {
 }
 
 .heading.final {
-	top: 9em;
+	top: 20%;
 	left: 0;
 	right: 0;
-	max-width: 35%;
+	width: 35%;
+	max-width: 750px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -154,6 +155,13 @@ body {
 	background-image: url("<%= asset_path 'landscape.jpg' %>");
 	background-size: cover;
 
+}
+
+.certificate {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
 }
 
 body:before{
