--- a/app/views/jobs/finished.html.erb
+++ b/app/views/jobs/finished.html.erb
@@ -1,8 +1,8 @@
 <div class="row full image-bottom <%= params[:location] %>">
-	<div class="columns small-8 small-centered text-center">
+	<div class="columns small-12 miedum-9 large-8 small-centered text-center">
 		<h1>Congratulations you got a job!</h1>
 	</div>
-	<div class="columns small-6 small-centered small-bump">
+	<div class="columns small-12 medium-9 large-8 small-centered small-bump">
 		<%= image_tag "certificate.png", class: "certificate" %>
 	</div>
 </div>
