--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+  	<a href="<%= root_path %>"><%= image_tag "CB4Kidz-logo-white.png", class: "logo shadow left" %></a>
 
     <%= yield %>
 
