--- a/app/views/jobs/results.html.erb
+++ b/app/views/jobs/results.html.erb
@@ -13,13 +13,13 @@
 		<% @results.model.jobs.each do |job| %>
 			<div class="row list">
 				<div class="column small-9">
-					<h3 class="resultsheader"><%= job.title %></h3>
-					<h4><%= job.company_name %> in <%= job.location %></h4>
+					<h3><%=job.title%></h3>
+					<h4><%= job.company_name %></h4>
 				</div>
 				<div class="column small-3 end">
-					<%= link_to "This one!", finished_path(params.merge(title: job.title, company: job.company_name, city: job.location).except(:action, :controller)), class: "button expand " %>
+					<%= link_to "This one!", finished_path(params.merge(title: "job-title", company: "company-name", city: "city, state").except(:job, :location, :action, :controller)), class: "button expand small" %>
 				</div>
 			</div>
-		<% end %>
+		<% end %> 
 	</div>
 </div>
